--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt-eslint": "^7.0.1"
+    "grunt-eslint": "^7.0.1",
+    "jade": "^1.9.2",
+    "lodash": "^3.3.1"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
